Convert to multi-module project and add cli tool

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
-rootProject.name = pName
+include 'core', 'cli'
+project(':core').name = 'shared-preferences'
+project(':cli').name = 'shared-preferences-cli'
