--- a/build.gradle
+++ b/build.gradle
@@ -2,42 +2,42 @@ wrapper {
     gradleVersion = '7.6.1'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
-
-group = pGroup
-version = pVersion
-
-if (project.hasProperty("topobyte")) {
-    apply from: 'file:///' + System.getProperty("user.home") \
-        + '/.gradle/topobyte.gradle'
+allprojects {
+    group = pGroup
+    version = pVersion
 }
 
-repositories {
-    maven {
-        url 'https://mvn.topobyte.de'
-    }
-    maven {
-        url 'https://mvn.slimjars.com'
-    }
-    mavenCentral()
+project(':shared-preferences') {
+    apply plugin: 'java-library'
+    apply plugin: 'maven-publish'
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-dependencies {
+project(':shared-preferences-cli') {
+    apply plugin: 'java'
 }
 
-java {
-    withSourcesJar()
-}
+subprojects {
+    apply plugin: 'eclipse'
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from components.java
+    repositories {
+        maven {
+            url 'https://mvn.topobyte.de'
         }
+        maven {
+            url 'https://mvn.slimjars.com'
+        }
+        mavenCentral()
+    }
+
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
+
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+    }
+
+    artifacts {
+        archives sourcesJar
     }
 }
